# Vtube

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  state.rs
src/components/AvatarDisplay/: AvatarDisplay.tsx
src/components/Camera/: CameraPreview.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/Settings/tabs/: AppearanceTab.tsx  AvatarTab.tsx  CameraTab.tsx  GeneralTab.tsx
src/hooks/: useFaceTracking.ts  useMicSpeech.ts
src/store/: useAppStore.ts
src/types/: index.ts
