[package]
name = "png-vtuber"
version = "0.1.0"
description = "PNG VTuber — Real-time face expression tracking desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework with system tray + image support
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
